# API_NLP_NER

./: Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py
app/engine/: __init__.py  constants.py  import_files.py  interface.py  semantic_attribution.py  shared.py
app/routers/: __init__.py  route_delete_outputs.py  route_get_output_ner.py  route_name_entity.py  route_update_files.py  semantic_clinical_notes_route.py
app/services/Assigning_id_concepts/: get_concept.py  ner.py  preprocessing_text.py  processing_clinical_note.py  processing_lote_clinical_notes.py
app/services/delete_and_get/: delete_and_get_file.py
app/services/update_file/: service_update_file.py
scripts/: run_app.py  setup_app.sh
tests/: __init__.py
